--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-PORT =5000
-MONGO_URI=mongodb+srv://rohit45colab:2FhyQFPobo976wXK@cluster0.wfdrobe.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-GEMINI_API_KEY =AIzaSyDVVemkmSGyiZn6pUipEhTdr5VoqZ84wDY
+PORT : the port on which your node will run 
+MONGO_URI : your mongo db api address
+GEMINI_API_KEY  gemini api key  
