--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT : the port on which your node will run 
 MONGO_URI : your mongo db api address
-GEMINI_API_KEY  gemini api key  
+GEMINI_API_KEY :  gemini api key  
